--- a/index.html
+++ b/index.html
@@ -21,5 +21,9 @@
             <div class="game__cell"></div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+  <script src="./main.js"></script>
 </body>
 </html>
