--- a/index.html
+++ b/index.html
@@ -8,17 +8,35 @@
 <body>
     <div class="game">
         <div class="game__cells-wrapper">
-            <div class="game__cell"></div>
-            <div class="game__cell"></div>
-            <div class="game__cell"></div>
+            <div class="game__cell" id="Up-left">
+                <p class="game__cell-text">X</p>
+            </div>
+            <div class="game__cell" id="Up-midle">
+                <p class="game__cell-text">X</p>
+            </div>
+            <div class="game__cell" id="Up-right">
+                <p class="game__cell-text">X</p>
+            </div>
             <div class="flex-break"></div>
-            <div class="game__cell"></div>
-            <div class="game__cell"></div>
-            <div class="game__cell"></div>
+            <div class="game__cell" id="Midle-left">
+                <p class="game__cell-text">X</p>
+            </div>
+            <div class="game__cell" id="Midle-center">
+                <p class="game__cell-text">X</p>
+            </div>
+            <div class="game__cell" id="Midle-right">
+                <p class="game__cell-text">X</p>
+            </div>
             <div class="flex-break"></div>
-            <div class="game__cell"></div>
-            <div class="game__cell"></div>
-            <div class="game__cell"></div>
+            <div class="game__cell" id="Down-left">
+                <p class="game__cell-text">X</p>
+            </div>
+            <div class="game__cell" id="Down-center">
+                <p class="game__cell-text">X</p>
+            </div>
+            <div class="game__cell" id="Down-right">
+                <p class="game__cell-text">X</p>
+            </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
