--- a/index.html
+++ b/index.html
@@ -9,34 +9,34 @@
 <body>
     <div class="game">
         <div class="game__cells-wrapper">
-            <div class="game__cell" id="Up-left">
-                <p class="game__cell-text">X</p>
+            <div class="game__cell" id="cell-1">
+                <p class="game__cell-text"></p>
             </div>
-            <div class="game__cell" id="Up-midle">
-                <p class="game__cell-text">X</p>
+            <div class="game__cell" id="cell-2">
+                <p class="game__cell-text"></p>
             </div>
-            <div class="game__cell" id="Up-right">
-                <p class="game__cell-text">X</p>
-            </div>
-            <div class="flex-break"></div>
-            <div class="game__cell" id="Midle-left">
-                <p class="game__cell-text">X</p>
-            </div>
-            <div class="game__cell" id="Midle-center">
-                <p class="game__cell-text">X</p>
-            </div>
-            <div class="game__cell" id="Midle-right">
-                <p class="game__cell-text">X</p>
+            <div class="game__cell" id="cell-3">
+                <p class="game__cell-text"></p>
             </div>
             <div class="flex-break"></div>
-            <div class="game__cell" id="Down-left">
-                <p class="game__cell-text">X</p>
+            <div class="game__cell" id="cell-4">
+                <p class="game__cell-text"></p>
             </div>
-            <div class="game__cell" id="Down-center">
-                <p class="game__cell-text">X</p>
+            <div class="game__cell" id="cell-5">
+                <p class="game__cell-text"></p>
             </div>
-            <div class="game__cell" id="Down-right">
-                <p class="game__cell-text">X</p>
+            <div class="game__cell" id="cell-6">
+                <p class="game__cell-text"></p>
+            </div>
+            <div class="flex-break"></div>
+            <div class="game__cell" id="cell-7">
+                <p class="game__cell-text"></p>
+            </div>
+            <div class="game__cell" id="cell-8">
+                <p class="game__cell-text"></p>
+            </div>
+            <div class="game__cell" id="cell-9">
+                <p class="game__cell-text"></p>
             </div>
         </div>
     </div>
