--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
             <div class="game__cell" id="cell-9">
                 <p class="game__cell-text"></p>
             </div>
+            <div class="flex-break"></div>
+            <div class="clear" id="clear">
+                <p class="clear-text">Clear</p>
+            </div>
+            
+            <div class="total" id="total">
+                <p class="total-text"></p>
+            </div>
+            
+
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
