--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="flex-break"></div>
             <div class="clear" id="clear">
-                <p class="clear-text">Clear</p>
+                <p class="clear-text">Clean</p>
             </div>
             
             <div class="total" id="total">
