--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="clear" id="clear">
                 <p class="clear-text">Clean</p>
             </div>
-            
+            <div class="flex-break"></div>
             <div class="total" id="total">
                 <p class="total-text"></p>
             </div>
